samples/_failures_safe/1761077559_a00d13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9a2ad52.c: In function ‘main’:
./samples/SAFE/__tmp_e9a2ad52.c:140:9: error: expected expression at end of input
  140 |         for (
      |         ^~~
./samples/SAFE/__tmp_e9a2ad52.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9a2ad52.c:140:9: error: expected declaration or statement at end of input
